# case-study-rat-containerization

./: .gitignore  CLAUDE.md  README.md  _helpers.py  jellycell.toml  pyproject.toml
artifacts/: balance_pretreatment.json  balance_table.parquet  bh_correction.json  bh_correction.parquet  bh_correction_table.parquet  bh_summary.json  cd_centroids.csv  cd_centroids.json  cross_estimator_check.json  density_continuity.json  diagnostics_checklist_meta.json  did_results.json  dohmh_cd_month_counts.parquet  dohmh_did_results.json  dohmh_panel.parquet  dohmh_panel.parquet.meta.json  dohmh_panel_summary.json  event_study.csv  event_study_summary.json  ff_panel.parquet  ff_panel.parquet.meta.json  ff_panel_summary.json  fig10_dohmh_meta.json  fig7_honestdid_meta.json  fig8_heterogeneity_meta.json  fig9_synthetic_control_meta.json  figure_index.json  findings_md_meta.json  headline_findings.json  heterogeneous_effects_by_borough.json  heterogeneous_effects_by_cohort.json  honestdid_sensitivity.json  hte_by_baseline.parquet  lisa_clusters.csv  lisa_clusters.json  log_outcome_did.json  main_results.parquet  manhattan_only_did.json  mde_analysis.json  mde_default.json  (+26 more)
data/: README.md  panel.parquet  rat_mitigation_events_2023.json  rat_mitigation_events_2023.json.meta.json
manuscripts/: APPENDIX_A_methods.md  APPENDIX_B_data.md  APPENDIX_C_honestdid.md  AUDIT.md  DIAGNOSTICS_CHECKLIST.md  FINDINGS.md  MANUSCRIPT.md  MANUSCRIPT_v2.md  METHODOLOGY.md  journal.md
notebooks/: 01_load_and_preprocess.py  02_balance_and_pretrends.py  03_main_effects.py  04_diagnostics.py  (+11 more)
(+93 files in other folders)
